fix: use Android-compatible policy test file reads